--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,6 +35,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity"/>
         </activity>
+        <activity
+            android:name=".DeviceScanActivity"
+            android:theme="@style/DialogTheme">
+        </activity>
+
+        <service android:name=".SoleBluetoothService"
+                 android:label="Sole BTService">
+        </service>
     </application>
 
 </manifest>
