New service implementation, connect + disconnect working

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,8 +40,11 @@
             android:theme="@style/DialogTheme">
         </activity>
 
-        <service android:name=".SoleBluetoothService"
-                 android:label="Sole BTService">
+        <service android:name=".LeftSoleBluetoothService"
+                 android:label="LeftSole BTService">
+        </service>
+        <service android:name=".RightSoleBluetoothService"
+                 android:label="RightSole BTService">
         </service>
     </application>
 
