New activity parent classes to handle BluetoothManager service, Left and Right services now bind to BluetoothManager, which provides public access to activities through its own service.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
         <service android:name=".RightSoleBluetoothService"
                  android:label="RightSole BTService">
         </service>
+        <service android:name=".BluetoothManager"
+                 android:label="Bluetooth Manager">
+        </service>
     </application>
 
 </manifest>
